src/objects/Apttus_Billing__BillingCustomClasses2__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to register custom classes that Implement Global interfaces exposed by Apttus for customization.</description>
    <fields>
        <fullName>Apttus_Billing__CustomNumberingCallbackClass__c</fullName>
        <description>The name of the callback class used to implement a custom numbering. The custom implementation will specify the setting id to be used for numbering.</description>
        <inlineHelpText>The name of the callback class used to implement a custom numbering. The custom implementation will specify the setting id to be used for numbering.</inlineHelpText>
        <label>Custom Numbering Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__EmailCreditMemoAttachmentCallbackClass__c</fullName>
        <description>The name of the callback class to provide customized contact list and email template for a given credit memo which will be used to send credit memo attachment via email</description>
        <inlineHelpText>The name of the callback class to provide customized contact list and email template for a given credit memo which will be used to send credit memo attachment via email</inlineHelpText>
        <label>EmailCreditMemoAttachmentCallbackClass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__EmailInvoiceAttachmentCallbackClass__c</fullName>
        <description>The name of the callback class to provide customized contact list and email template for a given Invoice which will be used to send invoice attachment via email</description>
        <inlineHelpText>The name of the callback class to provide customized contact list and email template for a given Invoice which will be used to send invoice attachment via email</inlineHelpText>
        <label>Email Invoice Attachment Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__InvoiceFilterCallbackClass__c</fullName>
        <description>The name of the callback class used to implement a custom filter for a given Invoice Run. The custom filter will augment the stock filter used to fetch Billing Schedules when creating a batch of Invoices.</description>
        <inlineHelpText>The name of the callback class used to implement a custom filter for a given Invoice Run. The custom filter will augment the stock filter used to fetch Billing Schedules when creating a batch of Invoices.</inlineHelpText>
        <label>Invoice Filter Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__InvoiceGroupingCallbackClass__c</fullName>
        <description>The name of the callback class used to further group Billing Schedules with a particular Invoice.</description>
        <inlineHelpText>The name of the callback class used to further group Billing Schedules with a particular Invoice.</inlineHelpText>
        <label>Invoice Grouping Callback Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Billing Custom Classes</label>
</CustomObject>